--- a/view/Weatherforecast.html
+++ b/view/Weatherforecast.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>CRUD Style</title>
+    <title>CRUD Weatherforecast</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 
@@ -15,18 +15,20 @@
         <div class="col"></div>
         <div class="col"></div>
         <div class="col">
-            <button data-toggle="modal" data-target="#insert-modal" class="btn btn-success">Add Style</button>
+            <button data-toggle="modal" data-target="#insert-modal" class="btn btn-success">Add Weatherforecast</button>
         </div>
     </div>
 </div>
 <br>
-<h3>List of Style</h3>
+<h3>List of Weatherforecast</h3>
 <br>
 <table class="table">
     <thead id="table-head">
         <tr>
+			<th> Summary </th>
+			<th> Temperaturec </th>
+			<th> Temperaturef </th>
 			<th> Id </th>
-			<th> Nom </th>
 
             <th></th>
             <th></th>
@@ -43,14 +45,22 @@
         <!-- Modal content-->
         <div class="modal-content">
             <div class="modal-header">
-                <h4 class="modal-title">Add Style</h4>
+                <h4 class="modal-title">Add Weatherforecast</h4>
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
             </div>
             <div class="modal-body">
                 <form action="" method="post" id="insert">
 	<div  class="mb-3"> 
-	 	<label class="form-label">Nom</label> 
-	 	<input class="form-control" type="text" name="nom" >
+	 	<label class="form-label">Summary</label> 
+	 	<input class="form-control" type="text" name="summary" >
+	</div>
+	<div  class="mb-3"> 
+	 	<label class="form-label">Temperaturec</label> 
+	 	<input class="form-control" type="number" name="temperaturec" >
+	</div>
+	<div  class="mb-3"> 
+	 	<label class="form-label">Temperaturef</label> 
+	 	<input class="form-control" type="number" name="temperaturef" >
 	</div>
 	
                 </form>
@@ -66,7 +76,7 @@
 </body>
 <script>
     $.ajax({
-        url: 'http://localhost:8080/style',
+        url: 'http://localhost:5289/weatherforecast',
         type: 'GET',
         success: function(data) {
             //console.log(data)
@@ -93,18 +103,26 @@
                     <!-- Modal content-->
                     <div class="modal-content">
                         <div class="modal-header">
-                            <h4 class="modal-title">Update Style</h4>
+                            <h4 class="modal-title">Update Weatherforecast</h4>
                             <button type="button" class="close" data-dismiss="modal">&times;</button>
                         </div>
                         <div class="modal-body">
                             <form action="" method="put" id="update-`+data[i]["id"]+`">
 	<div class="mb-3"> 
-	 	<label class="form-label"></label> 
-	 	<input class="form-control" type="hidden" name="id" value="`+data[i]["id"]+`">
+	 	<label class="form-label">Summary</label> 
+	 	<input class="form-control" type="text" name="summary" value="`+data[i]["summary"]+`">
 	</div>
 	<div class="mb-3"> 
-	 	<label class="form-label">Nom</label> 
-	 	<input class="form-control" type="text" name="nom" value="`+data[i]["nom"]+`">
+	 	<label class="form-label">Temperaturec</label> 
+	 	<input class="form-control" type="number" name="temperaturec" value="`+data[i]["temperaturec"]+`">
+	</div>
+	<div class="mb-3"> 
+	 	<label class="form-label">Temperaturef</label> 
+	 	<input class="form-control" type="number" name="temperaturef" value="`+data[i]["temperaturef"]+`">
+	</div>
+	<div class="mb-3"> 
+	 	<label class="form-label"></label> 
+	 	<input class="form-control" type="hidden" name="id" value="`+data[i]["id"]+`">
 	</div>
 	                                
                             </form>
@@ -120,23 +138,11 @@
                 
                 tbody.append(tr)
                 tbody.append(update_modal);
-	$.ajax({
-		url: 'http://localhost:8080/stylemateriel',
-		type: 'GET',
-		success: function(dataStylemateriel) {
-			var keys = Object.keys(dataStylemateriel[0]);
-			var select = $("#select-stylemateriel-"+data[i]["id"]);
-			for (let j = 0; j < dataStylemateriel.length; j++) { 
-				var option = `<option value=`+dataStylemateriel[j]["id"]+`>`+dataStylemateriel[j][""]+`</option>`;
-				select.append(option);
-			}
-		}
-	});
-	
+
                 $('#delete-'+data[i]["id"]).click(function() {
                     var d = data[i]
                     $.ajax({
-                        url: 'http://localhost:8080/style',
+                        url: 'http://localhost:5289/weatherforecast',
                         type: 'DELETE',
                         data: JSON.stringify(d),
                         contentType: 'application/json',
@@ -162,7 +168,7 @@
                         }
                     });
                     $.ajax({
-                        url: 'http://localhost:8080/style',
+                        url: 'http://localhost:5289/weatherforecast',
                         type: 'PUT',
                         data: JSON.stringify(datas),
                         contentType: 'application/json',
@@ -197,7 +203,7 @@
             }
         });
         $.ajax({
-            url: 'http://localhost:8080/style',
+            url: 'http://localhost:5289/weatherforecast',
             type: 'POST',
             data: JSON.stringify(data),
             contentType: 'application/json',
